fixed more overflow

--- a/src/classes/text.scss
+++ b/src/classes/text.scss
@@ -221,8 +221,12 @@ $animation-delay: (
         font-size: 56px;
     }
 
+    @include media('md', 'max-width') {
+        font-size: 36px;
+    }
+
     @include media('sm', 'max-width') {
-        font-size: 40px;
+        font-size: 28px;
     }
 
 }
@@ -234,8 +238,12 @@ $animation-delay: (
         font-size: 25px;
     }
 
-    @include media('sm', 'max-width') {
+    @include media('md', 'max-width') {
         font-size: 20px;
+    }
+
+    @include media('sm', 'max-width') {
+        font-size: 16px;
     }
 }
 
