--- a/src/index.scss
+++ b/src/index.scss
@@ -75,6 +75,7 @@ body {
   margin: 0;
   padding: 0;
   -webkit-font-smoothing: antialiased;
+  overflow-wrap: anywhere;
 }
 
 @mixin media($breakpoint, $type: "min-width") {
